force-app/main/default/objects/ClusterSetting__mdt/ClusterSetting__mdt.object-meta.xml
<CustomObject>
    <label>Cluster Setting</label>
    <pluralLabel>Cluster Settings</pluralLabel>
</CustomObject>