force-app/main/default/objects/ClusterSetting__mdt/fields/LongTextValue__c.field-meta.xml
<CustomField>
    <fullName>LongTextValue__c</fullName>
    <label>Long Text Value</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>